<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="connection_error">\nrequires an internet connection.</string>
    <string name="unknown_service_error">Unable to reach the Rotten Tomatoes service. Please try again later.</string>
 
        
    <string name="alternate_title">An alternate title that is long</string>
    <string name="toggle_title">Toggle title</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
        
        <string name="popular_lists_title">Popular Lists</string>
 
	<!-- Unlicensed dialog messages -->
	<string name="unlicensed_dialog_title">Application not licensed</string>
	<string name="unlicensed_dialog_body">This application is not licensed. Please purchase it from the Android Market.</string>
	<string name="buy_button">Purchase</string>
	<string name="quit_button">Cancel</string>
    
    <string name="pref_key_about">about</string>
    <string name="pref_key_feedback">feedback</string>
    <string name="pref_key_start_screen">start_screen</string>
    <string name="pref_key_clear_search_history">clear_search_history</string>
    <string name="pref_key_support">support</string>
    <string name="pref_key_accepted_terms_for_version">accept_terms</string>
    
    <string name="no_results">No Results Found.</string>
    
    <string name="no_reviews">No Reviews Found.</string>
    <string name="not_available">Not available.</string>
    
    <string name="search">Search</string>
    <string name="title_start_screen">Start Screen</string>
    <string name="title_search_query">Search for</string>
    <string name="title_box_office">Top Box Office</string>
    <string name="title_opening">Opening Soon</string>
    <string name="title_in_theaters">Now Playing</string>
    <string name="title_dvd_new_releases">DVD Releases</string>
    <string name="title_clear_search_history">Clear search history</string>
    <string name="title_support">Support</string>
    <string name="title_feedback">Send Feedback</string>
    
    
    <string name="title_sort">Sort</string>
    <string name="title_sort_by_title">Sort by Title</string>
    <string name="title_sort_by_critic_score">Sort by Rating</string>
    <string name="title_sort_by_release_date">Sort by Release</string>
    <string name="title_whats_new">What\'s New?</string>
    <string name="title_settings">Settings</string>
    
     <string name="cast_label">Cast</string>
      <string name="tops_label">Tops at the Box Office</string>
    
    <string name="search_hint">Search movies</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="loading_reviews">Loading reviews...</string>
    <string name="critics_consensus">Critic Consensus</string>
    
    <string name="synopsis_label">Synopsis</string>
    <string name="top_critic_reviews">Top Critic Reviews</string>
    
    <string name="message_clear_history">The search history will be deleted.</string>
    
    <string name="about">About</string>
    <string name="release_date_label">Release:</string>
    <string name="summary_label">Summary</string>  
    <string name="critics_label">Critics</string>
    <string name="audience_label">Audience</string>
    <string name="description_logo">Home</string>
    <string name="description_in_theaters">View the list of movies currently in theaters.</string>
    <string name="description_box_office">View the list of highest grossing movies at the box office.</string>
    <string name="description_opening">View the list of movies opening soon.</string>
    <string name="description_dvds">View the list of movies newly released on DVD.</string>
    <string name="description_search">Search for movies by title.</string>
    <string name="description_settings">Change application settings and view information about the application.</string>    
    <string name="description_start_screen">Choose the screen the app starts up on.</string>
    <string name="description_showtimes_link">Go to the Google movie show times web page </string>
    <string name="description_rottentomatoes_link">Go to the Rotten Tomatoes web page </string>
    <string name="description_imdb_link">Go to the IMDB web page </string>
    <string name="description_feedback">Send feedback to the development team.</string>
    <string name="description_decline_terms">Cancel and leave the app.</string>
    <string name="description_agree_to_terms">Agree to the app\'s end user license.</string>

    <!-- Used to determine if license check needed. -->
    <!--                          DO NOT CHANGE!    -->
    <string name="android_market">Android Market</string>

</resources>