<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="40dip">

		<TextView android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:text="@string/tops_label"
			android:textStyle="bold" android:textSize="20sp" android:gravity="center_vertical"
			android:layout_weight="1" />
			
			<ImageButton android:layout_width="wrap_content" android:layout_weight="0" 
				android:gravity="right" 
				android:src="@drawable/ic_menu_search"
				android:layout_height="fill_parent"
			    android:background="@null"
			android:onClick="fireSearch" />
	</LinearLayout>
	<LinearLayout android:id="@+id/progressBarLayout" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="center">
	<ProgressBar android:id="@+id/progressBar1"
	android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="center_vertical"/>
	<TextView android:id="@+id/loading_label" android:paddingLeft="15dip"
		android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical"
		android:text="@string/loading" />
		
    </LinearLayout>
		
	<ListView android:id="@android:id/list" android:layout_height="fill_parent"
		android:layout_width="fill_parent" />
	<TextView android:id="@+id/android:empty"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/no_results" />

</LinearLayout>
